@@ -5,7 +5,9 @@ Changelog
 2.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add method to remove a previously uninstalled portlet manager from the
+  persistent registry.
+  [deiferni]
 
 
 2.1.1 (2016-12-13)
